--- a/MacPatch/Self Patch/Self Patch/SelfPatchMainMenu.xib
+++ b/MacPatch/Self Patch/Self Patch/SelfPatchMainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment version="1060" defaultVersion="1060" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
@@ -269,10 +269,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                     </customView>
                     <box autoresizesSubviews="NO" title="Status" borderType="line" id="540">
-                        <rect key="frame" x="10.000000000000027" y="79" width="695" height="56"/>
+                        <rect key="frame" x="10.000000146199984" y="79" width="695" height="56"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
                         <view key="contentView">
-                            <rect key="frame" x="0.99999999999997335" y="1" width="693" height="40"/>
+                            <rect key="frame" x="1" y="1" width="693" height="40"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <textField verticalHuggingPriority="750" id="546">
@@ -294,10 +294,10 @@
                         <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </box>
                     <box autoresizesSubviews="NO" borderType="line" id="539">
-                        <rect key="frame" x="9.9999999999999112" y="16" width="695" height="62"/>
+                        <rect key="frame" x="10.000000146199984" y="16" width="695" height="62"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
                         <view key="contentView">
-                            <rect key="frame" x="1.0000000000000888" y="1" width="693" height="46"/>
+                            <rect key="frame" x="1" y="1" width="693" height="46"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <button verticalHuggingPriority="750" id="551">
@@ -460,7 +460,7 @@
                                                 </binding>
                                             </connections>
                                         </tableColumn>
-                                        <tableColumn identifier="size" width="75" minWidth="10" maxWidth="3.4028234663852886e+38" id="636">
+                                        <tableColumn identifier="size" editable="NO" width="75" minWidth="10" maxWidth="3.4028234663852886e+38" id="636">
                                             <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Size">
                                                 <font key="font" metaFont="smallSystem"/>
                                                 <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -473,7 +473,11 @@
                                             </textFieldCell>
                                             <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                             <connections>
-                                                <binding destination="576" name="value" keyPath="arrangedObjects.size" id="645"/>
+                                                <binding destination="576" name="value" keyPath="arrangedObjects.size" id="lK4-Of-bRb">
+                                                    <dictionary key="options">
+                                                        <string key="NSValueTransformerName">FileSizeTransformer</string>
+                                                    </dictionary>
+                                                </binding>
                                             </connections>
                                         </tableColumn>
                                         <tableColumn identifier="baseline" editable="NO" width="54" minWidth="10" maxWidth="3.4028234663852886e+38" id="638">
