--- a/MacPatch/MPClientStatus/MPClientStatus/CHMenuViewController.xib
+++ b/MacPatch/MPClientStatus/MPClientStatus/CHMenuViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="13F18" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6246" systemVersion="14A361c" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
-        <deployment defaultVersion="1070" identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5056"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6246"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="CHMenuViewController">
@@ -15,7 +15,7 @@
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
-        <customObject id="-3" userLabel="Application"/>
+        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
             <rect key="frame" x="0.0" y="0.0" width="337" height="20"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
@@ -117,5 +117,8 @@
                 </textField>
             </subviews>
         </customView>
+        <byteCountFormatter id="A5K-ZX-vdU">
+            <byteCountFormatterUnits key="allowedUnits" default="YES" bytes="YES" kb="YES" mb="YES" gb="YES" tb="YES" pb="YES" eb="YES" zb="YES" ybOrHigher="YES" all="YES"/>
+        </byteCountFormatter>
     </objects>
 </document>
