--- a/MacPatch Admin Tools/MPAgentUpload/MPPKGUpload/Preferences.xib
+++ b/MacPatch Admin Tools/MPAgentUpload/MPPKGUpload/Preferences.xib
@@ -2,13 +2,13 @@
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1060</int>
-		<string key="IBDocument.SystemVersion">14A379a</string>
-		<string key="IBDocument.InterfaceBuilderVersion">6246</string>
-		<string key="IBDocument.AppKitVersion">1343.13</string>
-		<string key="IBDocument.HIToolboxVersion">755.00</string>
+		<string key="IBDocument.SystemVersion">14F6a</string>
+		<string key="IBDocument.InterfaceBuilderVersion">7706</string>
+		<string key="IBDocument.AppKitVersion">1348.17</string>
+		<string key="IBDocument.HIToolboxVersion">758.70</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin</string>
-			<string key="NS.object.0">6246</string>
+			<string key="NS.object.0">7706</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>NSButton</string>
@@ -226,13 +226,13 @@
 							<string key="NSFrame">{{18, 107}, {383, 18}}</string>
 							<reference key="NSSuperview" ref="284242603"/>
 							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView"/>
+							<reference key="NSNextKeyView" ref="895661142"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSButtonCell" key="NSCell" id="512771175">
 								<int key="NSCellFlags">67108864</int>
 								<int key="NSCellFlags2">0</int>
 								<string key="NSContents">Do not upload package, for testing only. (Will Open Folder)</string>
-								<object class="NSFont" key="NSSupport">
+								<object class="NSFont" key="NSSupport" id="124230926">
 									<bool key="IBIsSystemFont">YES</bool>
 									<double key="NSSize">13</double>
 									<int key="NSfFlags">1044</int>
@@ -240,13 +240,63 @@
 								<reference key="NSControlView" ref="971942744"/>
 								<int key="NSButtonFlags">1211912448</int>
 								<int key="NSButtonFlags2">2</int>
-								<object class="NSCustomResource" key="NSNormalImage">
+								<object class="NSCustomResource" key="NSNormalImage" id="414952262">
 									<string key="NSClassName">NSImage</string>
 									<string key="NSResourceName">NSSwitch</string>
 								</object>
-								<object class="NSButtonImageSource" key="NSAlternateImage">
+								<object class="NSButtonImageSource" key="NSAlternateImage" id="1032181122">
 									<string key="NSImageName">NSSwitch</string>
 								</object>
+								<string key="NSAlternateContents"/>
+								<string key="NSKeyEquivalent"/>
+								<int key="NSPeriodicDelay">200</int>
+								<int key="NSPeriodicInterval">25</int>
+							</object>
+							<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
+						</object>
+						<object class="NSButton" id="895661142">
+							<reference key="NSNextResponder" ref="284242603"/>
+							<int key="NSvFlags">268</int>
+							<string key="NSFrame">{{18, 38}, {117, 18}}</string>
+							<reference key="NSSuperview" ref="284242603"/>
+							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView" ref="776219077"/>
+							<bool key="NSEnabled">YES</bool>
+							<object class="NSButtonCell" key="NSCell" id="453482900">
+								<int key="NSCellFlags">67108864</int>
+								<int key="NSCellFlags2">0</int>
+								<string key="NSContents">Debug Logging</string>
+								<reference key="NSSupport" ref="124230926"/>
+								<reference key="NSControlView" ref="895661142"/>
+								<int key="NSButtonFlags">1211912448</int>
+								<int key="NSButtonFlags2">2</int>
+								<reference key="NSNormalImage" ref="414952262"/>
+								<reference key="NSAlternateImage" ref="1032181122"/>
+								<string key="NSAlternateContents"/>
+								<string key="NSKeyEquivalent"/>
+								<int key="NSPeriodicDelay">200</int>
+								<int key="NSPeriodicInterval">25</int>
+							</object>
+							<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
+						</object>
+						<object class="NSButton" id="776219077">
+							<reference key="NSNextResponder" ref="284242603"/>
+							<int key="NSvFlags">268</int>
+							<string key="NSFrame">{{18, 18}, {258, 18}}</string>
+							<reference key="NSSuperview" ref="284242603"/>
+							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView"/>
+							<bool key="NSEnabled">YES</bool>
+							<object class="NSButtonCell" key="NSCell" id="482605399">
+								<int key="NSCellFlags">67108864</int>
+								<int key="NSCellFlags2">0</int>
+								<string key="NSContents">Echo to console (use only with Debug)</string>
+								<reference key="NSSupport" ref="124230926"/>
+								<reference key="NSControlView" ref="776219077"/>
+								<int key="NSButtonFlags">1211912448</int>
+								<int key="NSButtonFlags2">2</int>
+								<reference key="NSNormalImage" ref="414952262"/>
+								<reference key="NSAlternateImage" ref="1032181122"/>
 								<string key="NSAlternateContents"/>
 								<string key="NSKeyEquivalent"/>
 								<int key="NSPeriodicDelay">200</int>
@@ -260,7 +310,7 @@
 					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="971942744"/>
 				</object>
-				<string key="NSScreenRect">{{0, 0}, {2560, 1417}}</string>
+				<string key="NSScreenRect">{{0, 0}, {2560, 1577}}</string>
 				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
 				<bool key="NSWindowIsRestorable">YES</bool>
 			</object>
@@ -277,6 +327,30 @@
 						<reference key="destination" ref="443146327"/>
 					</object>
 					<int key="connectionID">4</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">toggleUpload:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="971942744"/>
+					</object>
+					<int key="connectionID">47</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">toggleDebug:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="895661142"/>
+					</object>
+					<int key="connectionID">60</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">toggleEcho:</string>
+						<reference key="source" ref="1001"/>
+						<reference key="destination" ref="776219077"/>
+					</object>
+					<int key="connectionID">61</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBBindingConnection" key="connection">
@@ -298,6 +372,48 @@
 						</object>
 					</object>
 					<int key="connectionID">46</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">value: values.Debug</string>
+						<reference key="source" ref="895661142"/>
+						<reference key="destination" ref="581913913"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="895661142"/>
+							<reference key="NSDestination" ref="581913913"/>
+							<string key="NSLabel">value: values.Debug</string>
+							<string key="NSBinding">value</string>
+							<string key="NSKeyPath">values.Debug</string>
+							<dictionary key="NSOptions">
+								<integer value="0" key="NSNoSelectionPlaceholder"/>
+								<integer value="0" key="NSNotApplicablePlaceholder"/>
+								<integer value="0" key="NSNullPlaceholder"/>
+							</dictionary>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">57</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">value: values.Echo</string>
+						<reference key="source" ref="776219077"/>
+						<reference key="destination" ref="581913913"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="776219077"/>
+							<reference key="NSDestination" ref="581913913"/>
+							<string key="NSLabel">value: values.Echo</string>
+							<string key="NSBinding">value</string>
+							<string key="NSKeyPath">values.Echo</string>
+							<dictionary key="NSOptions">
+								<integer value="0" key="NSNoSelectionPlaceholder"/>
+								<integer value="0" key="NSNotApplicablePlaceholder"/>
+								<integer value="0" key="NSNullPlaceholder"/>
+							</dictionary>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">59</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -340,6 +456,8 @@
 						<reference key="object" ref="284242603"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="971942744"/>
+							<reference ref="895661142"/>
+							<reference ref="776219077"/>
 						</array>
 						<reference key="parent" ref="443146327"/>
 					</object>
@@ -404,6 +522,32 @@
 						<reference key="object" ref="581913913"/>
 						<reference key="parent" ref="0"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">48</int>
+						<reference key="object" ref="895661142"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="453482900"/>
+						</array>
+						<reference key="parent" ref="284242603"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">49</int>
+						<reference key="object" ref="453482900"/>
+						<reference key="parent" ref="895661142"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">52</int>
+						<reference key="object" ref="776219077"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="482605399"/>
+						</array>
+						<reference key="parent" ref="284242603"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">53</int>
+						<reference key="object" ref="482605399"/>
+						<reference key="parent" ref="776219077"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -427,13 +571,17 @@
 				<string key="2.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="20.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="40.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="48.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="49.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="52.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="53.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">46</int>
+			<int key="maxID">61</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -443,6 +591,32 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">../MPPKGUpload/PreferenceController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">PreferenceController</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="toggleDebug:">id</string>
+						<string key="toggleEcho:">id</string>
+						<string key="toggleUpload:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="toggleDebug:">
+							<string key="name">toggleDebug:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="toggleEcho:">
+							<string key="name">toggleEcho:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="toggleUpload:">
+							<string key="name">toggleUpload:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">../MPPKGUpload/PreferenceController.m</string>
 					</object>
 				</object>
 			</array>
