--- a/MacPatch/MPLoginAgent/MPLoginAgent/Base.lproj/MainMenu.xib
+++ b/MacPatch/MPLoginAgent/MPLoginAgent/Base.lproj/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="14E36b" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7706"/>
@@ -23,12 +23,12 @@
             <windowCollectionBehavior key="collectionBehavior" fullScreenPrimary="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="808" y="802" width="797" height="678"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1577"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1417"/>
             <view key="contentView" canDrawConcurrently="YES" id="EiT-Mj-1SZ">
                 <rect key="frame" x="0.0" y="0.0" width="797" height="678"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fD7-DC-PMu">
+                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="fD7-DC-PMu">
                         <rect key="frame" x="365" y="38" width="66" height="32"/>
                         <buttonCell key="cell" type="push" title="Quit" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="qeE-1O-5IW">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -40,8 +40,8 @@
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="fD7-DC-PMu" secondAttribute="bottom" constant="80" id="DtF-jU-mIN"/>
-                    <constraint firstItem="fD7-DC-PMu" firstAttribute="centerX" secondItem="EiT-Mj-1SZ" secondAttribute="centerX" id="aXg-Xp-nUo"/>
+                    <constraint firstAttribute="bottom" secondItem="fD7-DC-PMu" secondAttribute="bottom" constant="45" id="Ex3-T9-VWE"/>
+                    <constraint firstItem="fD7-DC-PMu" firstAttribute="centerX" secondItem="EiT-Mj-1SZ" secondAttribute="centerX" id="KHU-2q-qeC"/>
                 </constraints>
             </view>
             <point key="canvasLocation" x="403.5" y="390"/>
