Removed Dev Quit Button from UI

--- a/MacPatch/MPLoginAgent/MPLoginAgent/Base.lproj/MainMenu.xib
+++ b/MacPatch/MPLoginAgent/MPLoginAgent/Base.lproj/MainMenu.xib
@@ -28,7 +28,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="797" height="678"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="fD7-DC-PMu">
+                    <button hidden="YES" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="fD7-DC-PMu">
                         <rect key="frame" x="365" y="38" width="66" height="32"/>
                         <buttonCell key="cell" type="push" title="Quit" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="qeE-1O-5IW">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
